--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
 
     <!-- Title -->
-    <title>Andy Zeng - Google</title>
+    <title>Yi Liu - UGent</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1000">
 
