--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div id="intro-image">
-          <img src="images/profile.jpg">
+          <img src="images/profile.jpeg">
         </div>
       </div>
 
