--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             Hola! I'm a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a>, ...
             <div id="more-bio" style="display: None">
               <br>
-              <p>Andy Zeng is a Senior Research Scientist at <a href="https://research.google/teams/robotics/">Google Brain</a> working on machine learning and robotics. He received his Bachelors in Computer Science and Mathematics at <a href="https://www.berkeley.edu/">UC Berkeley</a> '15, and his PhD in Computer Science at <a href="https://www.princeton.edu/">Princeton</a> '19. He is interested in building algorithms that enable machines to intelligently interact with the world and improve themselves over time. Andy received Best Paper Awards from T-RO '20, RSS'19, and has been finalist for best paper awards at CoRL '20 - '22, ICRA '20, RSS '19, IROS '18. He led perception as part of Team MIT-Princeton in the Amazon Robotics Challenge '16 and '17. Andy is a recipient of the Princeton SEAS Award for Excellence, Japan Foundation Paper Award, NVIDIA Fellowship '18, and Gordon Y.S. Wu Fellowship in Engineering and Wu Prize. His work has been featured in the press, including the New York Times, BBC, and Wired.</p>
+              <p>Yi Liu is a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning. ...
             </div>
             <br>
             <a href="javascript:toggle_bio()">Formal Bio</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -49,9 +49,6 @@
             <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.linkedin.com/in/andyzenglinked">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://twitter.com/andyzengtweets">Twitter</a>
-            <br><br>
-            andyzeng at google dot com
-            <br><br>
           </p>
         </div>
         <div id="intro-image">
