--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="intro-text">
           <h1>Yi Liu</h1>
           <p>
-            Hola! I'm a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a>, ...
+            Hola! I'm a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a>, ... this profile is not completed.
             <div id="more-bio" style="display: None">
               <br>
               <p>Yi Liu is a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning. ...
