--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <br>
             <a href="javascript:toggle_bio()">Formal Bio</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://github.com/andyzeng">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://github.com/0707yiliu">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
             <a href="https://www.linkedin.com/in/andyzenglinked">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://twitter.com/andyzengtweets">Twitter</a>
           </p>
