--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <a href="javascript:toggle_bio()">Formal Bio</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/0707yiliu">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <a href="https://www.linkedin.com/in/andyzenglinked">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://twitter.com/andyzengtweets">Twitter</a>
+            <!-- <a href="https://www.linkedin.com/in/andyzenglinked">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+            <!-- <a href="https://twitter.com/andyzengtweets">Twitter</a> -->
           </p>
         </div>
         <div id="intro-image">
@@ -68,9 +68,9 @@
 
         <!-- Highlights -->
         <div class="list-item highlight description" data-category="highlight">
-          Some recent highlights from our research:
+          Recent highlights research:
         </div>
-
+<!--
         <!-- Preview Videos -->
         <div class="list-item highlight previews" data-category="highlight">
 
@@ -80,9 +80,9 @@
 
           <a href="https://tossingbot.cs.princeton.edu/"><video class="preview3" playsinline="" muted="" autoplay="" loop=""><source src="images/video-tossingbot-crop.mp4" type="video/mp4"></video></a>
 
-        </div>
+        </div> -->
 
-        <!-- Truncated Set of Highlights (Shown by Default) -->
+<!--        <!-- Truncated Set of Highlights (Shown by Default) -->
         <div id="main-highlights">
 
           <div class="list-item highlight" data-category="highlight">
@@ -222,18 +222,18 @@
             <p class="date">2015</p>Honored to be a recipient of the <a href="http://giving.princeton.edu/scholarships-fellowships/fellowships/endowed2">Gordon Y.S. Wu Fellowship in Engineering and Wu Prize</a>
           </div>
 
-        </div>
+        </div> -->
 
         <!-- Toggle highlights button. -->
-        <div class="list-item highlight toggle-button" data-category="highlight">
+ <!--        <div class="list-item highlight toggle-button" data-category="highlight">
           <a id="toggle_highlights_button" href="javascript:toggle_highlights()">Show more</a>
-        </div>
+        </div>  -->
 
 
 
 
         <!-- Publications -->
-        <div class="list-item publication" data-category="publication">
+<!--        <div class="list-item publication" data-category="publication">
           <a href="https://palm-e.github.io/" class="thumbnail">
             <video playsinline="" muted="" autoplay="" loop="" width="180px">
               <source src="https://palm-e.github.io/videos/palm-e-teaser.mp4" type="video/mp4">
@@ -819,11 +819,11 @@
                 <a href="https://github.com/andyzeng/apc-vision-toolbox">Code</a>
             </p>
           </div>
-        </div>
+        </div> -->
 
 
 
-        <!-- Talks -->
+<!--        <!-- Talks -->
         <div class="list-item talk" data-category="talk">
           <p class="date">2023</p>Stanford <a href="https://svl.stanford.edu/">Vision and Learning Lab</a>
         </div>
@@ -894,12 +894,12 @@
 
         <div class="list-item talk" data-category="talk">
           <p class="date"></p>Guest Lecture at NCTU Robotics Seminar: Robotic Manipulation
-        </div>
+        </div> -->
 
 
 
 
-        <!-- Services -->
+<!--        <!-- Services -->
         <div class="list-item misc" data-category="misc">
           <p class="date">2023</p>Co-Organizer, AAAI Tutorial on <a href="https://transformer-tutorial.github.io/aaai2023/">Everything You Need to Know about Transformers</a>
         </div>
@@ -978,8 +978,8 @@
 
         <div class="list-item misc" data-category="misc">
           <p class="date"></p>Member, IEEE
-        </div>
-
+        </div>  -->
+        <div id="footer">Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. Inspired by <a href="https://github.com/andyzeng/andyzeng.github.io">Andy's website</a>.</div>
       </div>
     </div>
 
