--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </div> -->
 
         <!-- All Archived Highlights (Click to Show) -->
-        <div id="more-highlights" style="display: None">
+<!--         <div id="more-highlights" style="display: None">
 
-<!--           <div class="list-item highlight" data-category="highlight">
+          <div class="list-item highlight" data-category="highlight">
             <p class="date">2022</p>Conference on Robot Learning (CoRL) <a href="https://corl2022.org/awards/">Special Innovation Award</a>
           </div>
 
@@ -216,13 +216,13 @@
 
           <div class="list-item highlight" data-category="highlight">
             <p class="date">2016</p>3rd place winners at the worldwide <a href="https://www.amazonrobotics.com/">Amazon Picking Challenge</a> 2016 with <a href="https://arc.cs.princeton.edu/">Team MIT-Princeton</a>
-          </div> -->
+          </div>
 
           <div class="list-item highlight" data-category="highlight">
             <p class="date">2015</p>Honored to be a recipient of the <a href="http://giving.princeton.edu/scholarships-fellowships/fellowships/endowed2">Demo</a>
           </div>
 
-        </div> 
+        </div>  -->
 
         <!-- Toggle highlights button. -->
         <div class="list-item highlight toggle-button" data-category="highlight">
