--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    
     <!-- Google analytics tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-STGLQW4BJX"></script>
     <script>
@@ -22,7 +23,7 @@
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="style.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,9 +47,6 @@
             <br>
             <a href="javascript:toggle_bio()">Formal Bio</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/0707yiliu">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <!-- <a href="https://www.linkedin.com/in/andyzenglinked">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <!-- <a href="https://twitter.com/andyzengtweets">Twitter</a> -->
           </p>
         </div>
         <div id="intro-image">
