--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
         <div id="intro-text">
           <h1>Yi Liu</h1>
           <p>
-            Hola! I'm a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a>, ... this profile is not completed.
+            Hola! I'm a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a>, 
+            where I am interested in promoting the robots integrate into human's daily life smarter and safer.
+            My research focuses on robotic learning, which enables robots to intelligently interact with the world in which humans exist. 
+            Recently, I've been interested in how robots can interact with soft body more smoothly.
             <div id="more-bio" style="display: None">
               <br>
-              <p>Yi Liu is a PhD Candidate at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning. ...
+              <p>Yi Liu is a PhD Candidate (first-year) at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning, supervised by Francis wyffels.
+              He received his Bachelor in Automation in 2018 and his MSc in Control Engineering in 2021 at Guangdong University of Tech.
+              He is interested in building control systems and algorithms that enable robots to interact with the human world more intelligently and safely.
+              He is also interested in transfer learning, imitation learning, classical control algorithms, etc.
+              His previous research includes human-robot bilateral teleoperation, reinforcement learning sim2real, robotic contact with soft body (organs) and surgical robot positioning technology.
             </div>
             <br>
             <a href="javascript:toggle_bio()">Bio</a>&nbsp;&nbsp;&nbsp;&nbsp;
