--- a/index.html
+++ b/index.html
@@ -78,10 +78,26 @@
         <!-- Preview Videos -->
         <div class="list-item highlight previews" data-category="highlight">
 
-          <!-- <a href="https://palm-e.github.io/"><video class="preview1" playsinline="" muted="" autoplay="" loop=""><source src="https://palm-e.github.io/videos/palm-e-teaser.mp4" type="video/mp4"></video></a> -->
-          There will be put many videos.
-        </div>
+          <a>
+            <video class="preview2" playsinline="" muted="" autoplay="" loop="">
+              <source src="images/pih_vftm.mp4" type="video/mp4">
+            </video>
+          </a>
 
+          <a href="https://ieeexplore.ieee.org/document/9744489">
+            <video class="preview1" playsinline="" muted="" autoplay="" loop="">
+              <source src="images/icubtele.mp4" type="video/mp4">
+            </video>
+          </a>
+
+          <a href="https://ieeexplore.ieee.org/document/9811740">
+            <video class="preview2" playsinline="" muted="" autoplay="" loop="">
+              <source src="images/art2.mp4" type="video/mp4">
+            </video>
+          </a>
+          
+
+        </div>
         <!-- Truncated Set of Highlights (Shown by Default) -->
         <div id="main-highlights">
 
@@ -107,6 +123,20 @@
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
+          <a href="https://ieeexplore.ieee.org/document/9981464" class="thumbnail">
+            <img src="images/allgrohand_grasp.png">
+          </a>
+          <div class="project-description">
+            <h3><a href="https://ieeexplore.ieee.org/document/9981464">Multi-fingered Tactile Servoing for Grasping Adjustment under Partial Observation</a></h3>
+            <p>
+              Hanzhong Liu, Bidan Huang, Qiang Li, Yu Zheng, Yonggen Ling, Wangwei Lee, Yi Liu, Ya-Yen Tsai, Chenguang Yang<br>
+              <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2022</i><br>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9981464">PDF</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
           <a href="https://ieeexplore.ieee.org/document/9744489" class="thumbnail">
             <img src="images/icub_dextro.png">
           </a>
@@ -114,10 +144,8 @@
             <h3><a href="https://ieeexplore.ieee.org/document/9744489">Virtual Reality Based Tactile Sensing Enhancements for Bilateral Teleoperation System With In-Hand Manipulation</a></h3>
             <p>
               Yi Liu, Ya-Yen Tsai, Bidan Huang, Jing Guo<br>
-              <i>IEEE Robotics and Automation Letters (RA-L)</i><br>
-                <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
+              <i>IEEE Robotics and Automation Letters</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9744489">PDF</a>
-                <!-- <a href="https://palm-e.github.io/#demo">Demo</a> -->
             </p>
           </div>
         </div>
@@ -131,9 +159,7 @@
             <p>
               Yi Liu, Di Wu, Fengtao Han, Jing Guo, Zhaoshui He, Chao Liu<br>
               <i>International Conference on Robotics and Automation (ICRA) 2022</i><br>
-                <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9811740">PDF</a>
-                <!-- <a href="https://palm-e.github.io/#demo">Demo</a> -->
             </p>
           </div>
         </div>
@@ -147,9 +173,7 @@
             <p>
               Jing Guo, Yi Liu, Qing Qiu, Jie Huang, Chao Liu, Zhiguang Cao, Yue Chen<br>
               <i>IEEE Transactions on Cognitive and Developmental Systems</i><br>
-                <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9744489">PDF</a>
-                <!-- <a href="https://palm-e.github.io/#demo">Demo</a> -->
             </p>
           </div>
         </div>
@@ -162,10 +186,8 @@
             <h3><a href="https://ieeexplore.ieee.org/document/9195308">The Design and Control of Novel Needle Position Robotic System with Motion Uncertainties</a></h3>
             <p>
               Yi Liu, Jing Guo, Jiang Lan, Yujia Tang, Xinwei Chen, Xiaoming Xiong<br>
-              <i>IEEE Transactions on Cognitive and Developmental Systems</i><br>
-                <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
+              <i>5th International Conference on Advanced Robotics and Mechatronics (ICARM) 2020</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9195308">PDF</a>
-                <!-- <a href="https://palm-e.github.io/#demo">Demo</a> -->
             </p>
           </div>
         </div>
