--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9744489">Virtual Reality Based Tactile Sensing Enhancements for Bilateral Teleoperation System With In-Hand Manipulation</a></h3>
             <p>
-              Yi Liu, Ya-Yen Tsai, Bidan Huang, Jing Guo<br>
+              Yi Liu*, Ya-Yen Tsai*, Bidan Huang, Jing Guo<br>
               <i>IEEE Robotics and Automation Letters</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9744489">PDF</a>
             </p>
@@ -157,7 +157,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9811740">Online Adaptive Identification and Switching of Soft Contact Model Based on ART-II Method</a></h3>
             <p>
-              Yi Liu, Di Wu, Fengtao Han, Jing Guo, Zhaoshui He, Chao Liu<br>
+              Yi Liu*, Di Wu*, Fengtao Han, Jing Guo, Zhaoshui He, Chao Liu<br>
               <i>International Conference on Robotics and Automation (ICRA) 2022</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9811740">PDF</a>
             </p>
