--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
               Jing Guo, Yi Liu, Jin Wang, Chao Zeng, Jie Huang, and Chao Liu<br>
               <i>Complexity</i><br>
                 <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
-                <a href="https://downloads.hindawi.com/journals/complexity/2020/5406084.pdf">PDF</a>
-                <!-- <a href="https://palm-e.github.io/#demo">Demo</a> -->
+                <a href="https://downloads.hindawi.com/journals/complexity/2020/5406084.pdf">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                <a href="https://github.com/0707yiliu/MPC-Puncture-Robot">Code</a>
             </p>
           </div>
         </div>
