--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
         <!-- Truncated Set of Highlights (Shown by Default) -->
         <div id="main-highlights">
 
-          <div class="list-item highlight" data-category="highlight">
+          <!-- <div class="list-item highlight" data-category="highlight">
             <b>Demo</b> test <a href="https://airo.ugent.be/open-source/">"AiRO-imec open-source web"</a>
-          </div>
+          </div> -->
 
         </div>
 
         <!-- All Archived Highlights (Click to Show) -->
         <div id="more-highlights" style="display: None">
 
-          <div class="list-item highlight" data-category="highlight">
+          <!-- <div class="list-item highlight" data-category="highlight">
             <p class="date">2023</p>Conference on ICRA workshop <a href="https://ieeexplore.ieee.org/document/9811740">icra 2022</a>
-          </div>
+          </div> -->
 
         </div>
 
@@ -214,10 +214,11 @@
 
        <!-- Services -->
         <div class="list-item misc" data-category="misc">
-          <p class="date">2023</p>Demo <a href="https://transformer-tutorial.github.io/aaai2023/">Everything You Need to Know about Transformers</a>
+          <p class="date">2023</p>ICRA Workshop contribution<a href="https://sites.google.com/view/icra2023embracingcontacts/home"> A Robust and Safe Strategy for Robotic Assembly</a>
         </div>
 
-        <div id="footer">Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. Inspired by <a href="https://andyzeng.github.io/">Andy's website</a>.</div>
+        <div id="footer">Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. 
+          Inspired by <a href="https://andyzeng.github.io/">Andy's website</a>.</div>
       </div>
     </div>
 
