--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
           <a href="https://ieeexplore.ieee.org/document/9811740" class="thumbnail">
             <img src="images/hybrid_model_art2.png">
           </a>
-          <div class="project-description">
+<!--           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9811740">Online Adaptive Identification and Switching of Soft Contact Model Based on ART-II Method</a></h3>
             <p>
               Yi Liu*, Di Wu*, Fengtao Han, Jing Guo, Zhaoshui He, Chao Liu<br>
               <i>International Conference on Robotics and Automation (ICRA) 2022</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9811740">PDF</a>
             </p>
-          </div>
+          </div> -->
         </div>
 
         <div class="list-item publication" data-category="publication">
