--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
           <a href="https://ieeexplore.ieee.org/document/9811740" class="thumbnail">
             <img src="images/hybrid_model_art2.png">
           </a>
-<!--           <div class="project-description">
+          <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9811740">Online Adaptive Identification and Switching of Soft Contact Model Based on ART-II Method</a></h3>
             <p>
               Yi Liu*, Di Wu*, Fengtao Han, Jing Guo, Zhaoshui He, Chao Liu<br>
               <i>International Conference on Robotics and Automation (ICRA) 2022</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9811740">PDF</a>
             </p>
-          </div> -->
+          </div>
         </div>
 
         <div class="list-item publication" data-category="publication">
@@ -213,9 +213,9 @@
         </div> -->
 
        <!-- Services -->
-        <div class="list-item misc" data-category="misc">
+<!--         <div class="list-item misc" data-category="misc">
           <p class="date">2023</p>ICRA Workshop contribution<a href="https://sites.google.com/view/icra2023embracingcontacts/home"> A Robust and Safe Strategy for Robotic Assembly</a>
-        </div>
+        </div> -->
 
         <div id="footer">Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. 
           Inspired by <a href="https://andyzeng.github.io/">Andy's website</a>.</div>
