--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
        <!-- Services -->
         <div class="list-item misc" data-category="misc">
-          <p class="date">2023</p>ICRA Workshop contribution<a href="https://sites.google.com/view/icra2023embracingcontacts/home"> A Robust and Safe Strategy for Robotic Assembly</a>
+          <p class="date">2023</p>ICRA Workshop contribution<a href="https://openreview.net/forum?id=CN2Zr3ZYHF"> A Robust and Safe Strategy for Robotic Assembly</a>
         </div>
 
         <div id="footer">Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. 
