--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9981464">Multi-fingered Tactile Servoing for Grasping Adjustment under Partial Observation</a></h3>
             <p>
-              Hanzhong Liu, Bidan Huang, Qiang Li, Yu Zheng, Yonggen Ling, Wangwei Lee, Yi Liu, Ya-Yen Tsai, Chenguang Yang<br>
+              Hanzhong Liu, Bidan Huang, Qiang Li, Yu Zheng, Yonggen Ling, Wangwei Lee, <b>Yi Liu</b>, Ya-Yen Tsai, Chenguang Yang<br>
               <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2022</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9981464">PDF</a>
             </p>
@@ -143,7 +143,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9744489">Virtual Reality Based Tactile Sensing Enhancements for Bilateral Teleoperation System With In-Hand Manipulation</a></h3>
             <p>
-              Yi Liu*, Ya-Yen Tsai*, Bidan Huang, Jing Guo<br>
+              <b>Yi Liu</b>*, Ya-Yen Tsai*, Bidan Huang, Jing Guo<br>
               <i>IEEE Robotics and Automation Letters</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9744489">PDF</a>
             </p>
@@ -171,7 +171,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/8931566">A Novel Robotic Guidance System With Eye-Gaze Tracking Control for Needle-Based Interventions</a></h3>
             <p>
-              Jing Guo, Yi Liu, Qing Qiu, Jie Huang, Chao Liu, Zhiguang Cao, Yue Chen<br>
+              Jing Guo, <b>Yi Liu</b>, Qing Qiu, Jie Huang, Chao Liu, Zhiguang Cao, Yue Chen<br>
               <i>IEEE Transactions on Cognitive and Developmental Systems</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9744489">PDF</a>
             </p>
@@ -185,7 +185,7 @@
           <div class="project-description">
             <h3><a href="https://ieeexplore.ieee.org/document/9195308">The Design and Control of Novel Needle Position Robotic System with Motion Uncertainties</a></h3>
             <p>
-              Yi Liu, Jing Guo, Jiang Lan, Yujia Tang, Xinwei Chen, Xiaoming Xiong<br>
+              <b>Yi Liu</b>, Jing Guo, Jiang Lan, Yujia Tang, Xinwei Chen, Xiaoming Xiong<br>
               <i>5th International Conference on Advanced Robotics and Mechatronics (ICARM) 2020</i><br>
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9195308">PDF</a>
             </p>
@@ -199,7 +199,7 @@
           <div class="project-description">
             <h3><a href="https://www.hindawi.com/journals/complexity/2020/5406084/">The Design of Compact Robotic-Assisted Needle Position System with MPC-Based Remote Control</a></h3>
             <p>
-              Jing Guo, Yi Liu, Jin Wang, Chao Zeng, Jie Huang, and Chao Liu<br>
+              Jing Guo, <b>Yi Liu</b>, Jin Wang, Chao Zeng, Jie Huang, and Chao Liu<br>
               <i>Complexity</i><br>
                 <!-- <a href="https://ieeexplore.ieee.org/document/9811740">Webpage</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp; -->
                 <a href="https://downloads.hindawi.com/journals/complexity/2020/5406084.pdf">PDF</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
