--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Recently, I've been interested in how robots can interact with soft body more smoothly.
             <div id="more-bio" style="display: None">
               <br>
-              <p>Yi Liu is a PhD Candidate (2nd-year) at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning, supervised by Francis wyffels.
+              <p>Yi Liu is a PhD Candidate (3rd-year) at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning, supervised by Francis wyffels.
               He received his Bachelor in Automation in 2018 and his MSc in Control Engineering in 2021 at Guangdong University of Tech.
               He is interested in building control systems and algorithms that enable robots to interact with the human world more intelligently and safely.
               He is also interested in transfer learning, imitation learning, classical control algorithms, etc.
@@ -122,6 +122,20 @@
         </div>  
 
         <!-- Publications -->
+        <div class="list-item publication" data-category="publication">
+          <a href="https://ieeexplore.ieee.org/document/10521750" class="thumbnail">
+            <img src="images/framework1-1.jpeg">
+          </a>
+          <div class="project-description">
+            <h3><a href="https://ieeexplore.ieee.org/document/10521750">Multi-fingered Tactile Servoing for Grasping Adjustment under Partial Observation</a></h3>
+            <p>
+              Hanzhong Liu, Bidan Huang, Qiang Li, Yu Zheng, Yonggen Ling, Wangwei Lee, <b>Yi Liu</b>, Ya-Yen Tsai, Chenguang Yang<br>
+              <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2022</i><br>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9981464">PDF</a>
+            </p>
+          </div>
+        </div>
+        
         <div class="list-item publication" data-category="publication">
           <a href="https://ieeexplore.ieee.org/document/9981464" class="thumbnail">
             <img src="images/allgrohand_grasp.png">
