--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             <img src="images/framework1-1.jpeg">
           </a>
           <div class="project-description">
-            <h3><a href="https://ieeexplore.ieee.org/document/10521750">Multi-fingered Tactile Servoing for Grasping Adjustment under Partial Observation</a></h3>
+            <h3><a href="https://ieeexplore.ieee.org/document/10521750">Compliant Robust Control for Robotic Insertion of Soft Bodies</a></h3>
             <p>
-              Hanzhong Liu, Bidan Huang, Qiang Li, Yu Zheng, Yonggen Ling, Wangwei Lee, <b>Yi Liu</b>, Ya-Yen Tsai, Chenguang Yang<br>
-              <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2022</i><br>
-                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9981464">PDF</a>
+              <b>Yi Liu</b>, Andreas Verleysen, Francis Wyffels<br>
+              <i>IEEE Robotics and Automation Letters</i><br>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10521750">PDF</a>
             </p>
           </div>
         </div>
