--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="more-bio" style="display: None">
               <br>
               <p>Yi Liu is a PhD Candidate (3rd-year) at <a href="https://airo.ugent.be/">UGent AiRO-imec</a> working on robotics and reinforcement learning, supervised by Francis wyffels.
-              He received his Bachelor in Automation in 2018 and his MSc in Control Engineering in 2021 at Guangdong University of Tech.
+              He received his Bachelor in Automation in 2018 and his M.Eng in Control Engineering in 2021 at Guangdong University of Tech.
               He is interested in building control systems and algorithms that enable robots to interact with the human world more intelligently and safely.
               He is also interested in transfer learning, imitation learning, classical control algorithms, etc.
               His previous research includes human-robot bilateral teleoperation, reinforcement learning sim2real, robotic contact with soft body (organs) and surgical robot positioning technology.
