--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
 
        <!-- Services -->
         <div class="list-item misc" data-category="misc">
-          <p class="date">2023</p>ICRA Workshop contribution<a href="https://openreview.net/forum?id=CN2Zr3ZYHF"> A Robust and Safe Strategy for Robotic Assembly</a>
+          <p class="date">2023</p>ICRA Workshop contribution<a href="https://openreview.net/forum?id=CN2Zr3ZYHF"> A Robust and Safe Strategy for Robotic Assembly</a> 
+        </div>
+        <div class="list-item misc" data-category="misc">
           <p class="date">2024</p>IROS Oral Presentation<a href="https://ieeexplore.ieee.org/document/10521750"> Compliant Robust Control for Robotic Insertion of Soft Bodies (Trasferred from RA-L)</a>
         </div>
 
