--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@
         </div>  
 
         <!-- Publications -->
+         <div class="list-item publication" data-category="publication">
+          <a href="https://ieeexplore.ieee.org/document/10521750" class="thumbnail">
+            <img src="images/framework.png">
+          </a>
+          <div class="project-description">
+            <h3><a href="https://ieeexplore.ieee.org/document/10521750">One-Shot Demonstration for Slicing and Cutting
+Everyday Food Items</a></h3>
+            <p>
+              <b>Yi Liu</b>, Andreas Verleysen, Francis Wyffels<br>
+              <i>IEEE Robotics and Automation Letters</i><br>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10521750">PDF</a>
+            </p>
+          </div>
+        </div>
+
         <div class="list-item publication" data-category="publication">
           <a href="https://ieeexplore.ieee.org/document/10521750" class="thumbnail">
             <img src="images/framework1-1.jpeg">
